@@ -13,7 +13,6 @@ DEFINT A-Z
 #include "scancodes.bi"
 
 DECLARE FUNCTION str2lng& (stri$)
-DECLARE FUNCTION str2int% (stri$)
 DECLARE FUNCTION filenum$ (n%)
 DECLARE SUB clearallpages ()
 DECLARE SUB enforceflexbounds (menuoff%(), menutype%(), menulimits%(), recbuf%(), min%(), max%())
