@@ -48,6 +48,7 @@ WHAT IS NEW?
     * "slice x", "slice y", "set slice x", "set slice y", "slice width",
       "slice height", "set horiz align", "set vert align",
       "set horiz anchor", "set vert anchor" [James]
+    * "number from string" [James]
 
   * Vikings of Midgard
 
